[FLINK-38343][runtime] Support store rescale history with statistics by ExecutionGraphInfo.
Co-authored-by: XComp <mpohl@confluent.io>
Co-authored-by: WeiZhong94 <weizhong0618@gmail.com>
Co-authored-by: ferenc-csaky <fcsaky@apache.org>

Signed-off-by: Yuepeng Pan <panyuepeng@apache.org>