@@ -24,12 +24,13 @@ import org.apache.flink.configuration.JobManagerOptions;
 import org.apache.flink.runtime.executiongraph.ArchivedExecutionGraph;
 import org.apache.flink.runtime.executiongraph.ExecutionGraph;
 import org.apache.flink.runtime.rest.messages.job.rescales.JobRescaleConfigInfo;
+import org.apache.flink.runtime.scheduler.adaptive.timeline.RescalesStatsSnapshot;
 import org.apache.flink.runtime.scheduler.exceptionhistory.RootExceptionHistoryEntry;
 
 import javax.annotation.Nullable;
 
 import java.io.Serializable;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 /**
@@ -46,35 +47,48 @@ public class ExecutionGraphInfo implements Serializable {
 
     /**
      * The value is null when the job is not enabled {@link
-     * org.apache.flink.runtime.scheduler.adaptive.AdaptiveScheduler}.
+     * JobManagerOptions.SchedulerType#Adaptive} scheduler.
      */
     @Nullable private final JobRescaleConfigInfo jobRescaleConfigInfo;
+
+    /**
+     * This field is null when the value of {@link
+     * org.apache.flink.configuration.WebOptions#MAX_ADAPTIVE_SCHEDULER_RESCALE_HISTORY_SIZE} is not
+     * a positive number.
+     */
+    @Nullable private final RescalesStatsSnapshot rescalesStatsSnapshot;
 
     public ExecutionGraphInfo(ArchivedExecutionGraph executionGraph) {
         this(
                 executionGraph,
                 executionGraph.getFailureInfo() != null
-                        ? Collections.singleton(
+                        ? List.of(
                                 RootExceptionHistoryEntry.fromGlobalFailure(
                                         executionGraph.getFailureInfo()))
-                        : Collections.emptyList());
+                        : List.of(),
+                null,
+                null,
+                null);
     }
 
     public ExecutionGraphInfo(
             ArchivedExecutionGraph executionGraph,
-            Iterable<RootExceptionHistoryEntry> exceptionHistory) {
-        this(executionGraph, exceptionHistory, null, null);
+            Iterable<RootExceptionHistoryEntry> exceptionHistory,
+            @Nullable JobManagerOptions.SchedulerType schedulerType) {
+        this(executionGraph, exceptionHistory, schedulerType, null, null);
     }
 
     public ExecutionGraphInfo(
             ArchivedExecutionGraph executionGraph,
             Iterable<RootExceptionHistoryEntry> exceptionHistory,
             @Nullable JobManagerOptions.SchedulerType schedulerType,
-            @Nullable JobRescaleConfigInfo jobRescaleConfigInfo) {
+            @Nullable JobRescaleConfigInfo jobRescaleConfigInfo,
+            @Nullable RescalesStatsSnapshot rescalesStatsSnapshot) {
         this.executionGraph = executionGraph;
         this.exceptionHistory = exceptionHistory;
         this.schedulerType = schedulerType;
         this.jobRescaleConfigInfo = jobRescaleConfigInfo;
+        this.rescalesStatsSnapshot = rescalesStatsSnapshot;
     }
 
     public JobID getJobId() {
@@ -107,5 +121,10 @@ public class ExecutionGraphInfo implements Serializable {
     @Nullable
     public JobManagerOptions.SchedulerType getSchedulerType() {
         return schedulerType;
+    }
+
+    @Nullable
+    public RescalesStatsSnapshot getRescalesStatsSnapshot() {
+        return rescalesStatsSnapshot;
     }
 }
